try to fix form formatting issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ main {
     text-align: center;
 }
 .form-button {
-    width: 100px;
+    width: 120px;
     height: 50px;
     font-size: 16px;
     background-color: gray;
